[gd_scene load_steps=44 format=2]

[ext_resource path="res://assets/Shaders/WhiteColor.shader" type="Shader" id=1]
[ext_resource path="res://assets/Enemies/AttackController.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Enemies/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/CollisionBoxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/CollisionBoxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Enemies/EnemyHealth.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Enemies/AttackPlayerZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/CollisionBoxes/SoftCollision.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Enemies/Bat/Bat.gd" type="Script" id=10]
[ext_resource path="res://assets/Enemies/EnemyStats.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/CollisionBoxes/EnemyHurtbox.gd" type="Script" id=12]
[ext_resource path="res://assets/Enemies/Bat/Bat.png" type="Texture" id=14]
[ext_resource path="res://assets/Shadows/SmallShadow.png" type="Texture" id=15]
[ext_resource path="res://assets/Enemies/Bat/Bat_eye.png" type="Texture" id=16]
[ext_resource path="res://assets/Audio/Enemies/Bat/Bat.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/Enemies/Bat/Bat_outline.png" type="Texture" id=18]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 18, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 14 )
region = Rect2( 18, 0, 18, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 14 )
region = Rect2( 36, 0, 18, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 14 )
region = Rect2( 54, 0, 18, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 14 )
region = Rect2( 72, 0, 18, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 18, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 16 )
region = Rect2( 18, 0, 18, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 16 )
region = Rect2( 36, 0, 18, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 16 )
region = Rect2( 54, 0, 18, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 16 )
region = Rect2( 72, 0, 18, 24 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 18, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 18 )
region = Rect2( 18, 0, 18, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 18 )
region = Rect2( 36, 0, 18, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 18 )
region = Rect2( 54, 0, 18, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 18 )
region = Rect2( 72, 0, 18, 24 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=20]
radius = 5.0
height = 10.0

[sub_resource type="Animation" id=21]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=22]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=23]
radius = 8.0

[sub_resource type="CircleShape2D" id=24]
radius = 64.0

[sub_resource type="CircleShape2D" id=25]
radius = 32.0

[sub_resource type="CircleShape2D" id=26]
radius = 5.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16400
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 7 )
animation = "fly"
offset = Vector2( 0, -12 )

[node name="AnimatedSpriteEye" type="AnimatedSprite" parent="AnimatedSprite"]
modulate = Color( 0, 0, 0, 1 )
frames = SubResource( 13 )
offset = Vector2( 0, -12 )

[node name="Outline" type="AnimatedSprite" parent="AnimatedSprite"]
visible = false
z_index = 2
frames = SubResource( 19 )
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9 )
shape = SubResource( 20 )

[node name="Stats" parent="." instance=ExtResource( 11 )]
max_health = 26
defense = 2.0
status_resistance = 0.2
base_evasion = 2
experience_pool = 18
affinity = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/StartFlashing = SubResource( 21 )
anims/StopFlashing = SubResource( 22 )

[node name="Talkbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Talkbox"]
position = Vector2( 0, -14 )
shape = SubResource( 23 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
pause_mode = 2
collision_layer = 8
script = ExtResource( 12 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -14 )
shape = SubResource( 23 )

[node name="WanderController" parent="." instance=ExtResource( 3 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
monitorable = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 24 )

[node name="AttackController" parent="." instance=ExtResource( 2 )]

[node name="AttackPlayerZone" parent="." instance=ExtResource( 8 )]
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="AttackPlayerZone" index="0"]
shape = SubResource( 25 )

[node name="AttackTimer" type="Timer" parent="AttackPlayerZone"]
wait_time = 0.8
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -3 )
collision_mask = 4
damage = 8.0
accuracy = 75.0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 26 )

[node name="SoftCollision" parent="." instance=ExtResource( 9 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 26 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="EnemyHealth" parent="." instance=ExtResource( 7 )]
visible = false

[node name="StatusDisplay" type="Node2D" parent="."]
position = Vector2( 0, -22 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 1, 2.75 )
rect = Rect2( -1, -1, 2, 8 )
__meta__ = {
"_editor_description_": "	"
}

[connection signal="no_health" from="Stats" to="." method="_on_BatStats_no_health"]
[connection signal="no_health" from="Stats" to="EnemyHealth" method="_on_stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="AttackPlayerZone/AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="AttackPlayerZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
