[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/WhiteColor.shader" type="Shader" id=1]
[ext_resource path="res://assets/Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/Enemies/Bat/Bat.gd" type="Script" id=3]
[ext_resource path="res://assets/CollisionBoxes/EnemyHurtbox.gd" type="Script" id=4]
[ext_resource path="res://assets/Enemies/AttackController.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Enemies/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/CollisionBoxes/Hurtbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/CollisionBoxes/Hitbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Enemies/EnemyHealth.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/Enemies/AttackPlayerZone.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/CollisionBoxes/SoftCollision.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Enemies/EnemyStats.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/Enemies/Bat/BatStats.gd" type="Script" id=14]
[ext_resource path="res://assets/Enemies/Bat/Bat.png" type="Texture" id=15]
[ext_resource path="res://assets/Shadows/SmallShadow.png" type="Texture" id=16]
[ext_resource path="res://assets/Enemies/Bat/Bat_eye.png" type="Texture" id=17]
[ext_resource path="res://assets/Audio/Enemies/Bat/Bat.wav" type="AudioStream" id=18]


[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 15 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 15 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 15 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 15 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 17 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 17 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 17 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 17 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 4.0

[sub_resource type="Animation" id=15]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=16]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=17]

[node name="Enemy" type="Node2D"]
script = ExtResource( 2 )

[node name="Bat" type="KinematicBody2D" parent="."]
collision_layer = 16400
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bat"]
material = SubResource( 1 )
frames = SubResource( 7 )
animation = "fly"
offset = Vector2( 0, -12 )

[node name="AnimatedSpriteEye" type="AnimatedSprite" parent="Bat/AnimatedSprite"]
modulate = Color( 0, 0, 0, 1 )
frames = SubResource( 13 )
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="Bat"]
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bat"]
position = Vector2( 0, -3 )
shape = SubResource( 14 )

[node name="BatStats" parent="Bat" instance=ExtResource( 13 )]
script = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bat"]
anims/StartFlashing = SubResource( 15 )
anims/StopFlashing = SubResource( 16 )

[node name="Talkbox" type="Area2D" parent="Bat"]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bat/Talkbox"]
position = Vector2( 0, -14 )
shape = SubResource( 17 )

[node name="Hurtbox" parent="Bat" instance=ExtResource( 7 )]
visible = false
collision_layer = 8
script = ExtResource( 4 )

[node name="WanderController" parent="Bat" instance=ExtResource( 6 )]

[node name="PlayerDetectionZone" parent="Bat" instance=ExtResource( 8 )]
visible = false

[node name="AttackController" parent="Bat" instance=ExtResource( 5 )]

[node name="AttackPlayerZone" parent="Bat" instance=ExtResource( 11 )]
visible = false
collision_layer = 0
collision_mask = 2

[node name="AttackTimer" type="Timer" parent="Bat/AttackPlayerZone"]
wait_time = 0.8
one_shot = true

[node name="Hitbox" parent="Bat" instance=ExtResource( 9 )]
position = Vector2( 0, -3 )
collision_mask = 4
damage = 8.0

[node name="SoftCollision" parent="Bat" instance=ExtResource( 12 )]
visible = false

[node name="Timer" type="Timer" parent="Bat"]
wait_time = 0.5
one_shot = true

[node name="DelayTimer" type="Timer" parent="Bat"]
wait_time = 0.33
one_shot = true

[node name="Tween" type="Tween" parent="Bat"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Bat"]
stream = ExtResource( 18 )

[node name="EnemyHealth" parent="Bat" instance=ExtResource( 10 )]
visible = false

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Bat"]
position = Vector2( 0, -16 )
scale = Vector2( 1, 2.75 )
rect = Rect2( -1, -1, 2, 8 )
__meta__ = {
"_editor_description_": "	"
}
[connection signal="no_health" from="Bat/BatStats" to="Bat" method="_on_BatStats_no_health"]
[connection signal="area_entered" from="Bat/Hurtbox" to="Bat" method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Bat/Hurtbox" to="Bat" method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Bat/Hurtbox" to="Bat" method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="Bat/AttackPlayerZone/AttackTimer" to="Bat" method="_on_AttackTimer_timeout"]
[connection signal="viewport_exited" from="Bat/VisibilityNotifier2D" to="Bat" method="_on_VisibilityNotifier2D_viewport_exited"]
